[gd_scene load_steps=9 format=3 uid="uid://b5jjgoky4qx46"]

[ext_resource type="Script" path="res://scripts/hud.gd" id="1_4alpo"]
[ext_resource type="Texture2D" uid="uid://br0ctp0iv3j74" path="res://textures/deck_button.png" id="2_lrc75"]
[ext_resource type="Script" path="res://scripts/inventory.gd" id="3_s06af"]
[ext_resource type="PackedScene" uid="uid://d3oa5axvtgx1k" path="res://scenes/hand.tscn" id="4_u08ry"]
[ext_resource type="Texture2D" uid="uid://ba5s4ld6pvo2e" path="res://textures/Coin.png" id="5_jxt77"]
[ext_resource type="Script" path="res://scripts/deck_cards.gd" id="5_xm5f8"]

[sub_resource type="Gradient" id="Gradient_fvj2n"]
offsets = PackedFloat32Array(1)
colors = PackedColorArray(0.734454, 0.0355619, 0.0197759, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_c1ge3"]
gradient = SubResource("Gradient_fvj2n")
width = 200
height = 30

[node name="hud" type="Node2D"]
z_index = 1
script = ExtResource("1_4alpo")

[node name="Inventory" type="Node2D" parent="."]
z_index = 1
script = ExtResource("3_s06af")

[node name="Items" type="Node2D" parent="Inventory"]
unique_name_in_owner = true

[node name="Hand" parent="." instance=ExtResource("4_u08ry")]
position = Vector2(87, 340)

[node name="Gold" type="Node2D" parent="."]
position = Vector2(671, 10)

[node name="GoldSprite" type="Sprite2D" parent="Gold"]
position = Vector2(20, 20)
scale = Vector2(0.3, 0.3)
texture = ExtResource("5_jxt77")

[node name="GoldNumber" type="Label" parent="Gold"]
offset_left = 48.0
offset_top = 7.0
offset_right = 88.0
offset_bottom = 30.0
text = "0"

[node name="Exit" type="Button" parent="."]
offset_left = 14.0
offset_top = 14.0
offset_right = 54.0
offset_bottom = 56.0
focus_mode = 0

[node name="Deck" type="Node2D" parent="."]
z_index = 1

[node name="CardsToDraw" type="Label" parent="Deck"]
offset_left = 34.0
offset_top = 340.0
offset_right = 74.0
offset_bottom = 363.0
text = "4"
horizontal_alignment = 1

[node name="CardsPlayed" type="Label" parent="Deck"]
offset_left = 686.0
offset_top = 340.0
offset_right = 726.0
offset_bottom = 363.0
text = "0"
horizontal_alignment = 1

[node name="Panel" type="Panel" parent="Deck"]
visible = false
modulate = Color(1, 1, 1, 0.5)
visibility_layer = 3
z_index = 3
offset_left = -23.0
offset_top = -11.0
offset_right = 1187.0
offset_bottom = 675.0

[node name="DeckButton" type="Button" parent="Deck"]
z_index = 3
offset_left = 30.0
offset_top = 362.0
offset_right = 166.0
offset_bottom = 498.0
scale = Vector2(0.361375, 0.36)
focus_mode = 0
toggle_mode = true
icon = ExtResource("2_lrc75")
flat = true

[node name="DiscardedCardsButton" type="Button" parent="Deck"]
offset_left = 661.0
offset_top = 372.0
offset_right = 747.0
offset_bottom = 414.0
focus_mode = 0
text = "Discarded"

[node name="DeckCards" type="Node2D" parent="Deck"]
visible = false
top_level = true
z_index = 2
script = ExtResource("5_xm5f8")

[node name="Health" type="Node2D" parent="."]
position = Vector2(197, 317)

[node name="HeroHealthBar" type="TextureProgressBar" parent="Health"]
offset_left = -100.0
offset_top = -15.0
offset_right = 100.0
offset_bottom = 15.0
max_value = 80.0
value = 80.0
texture_progress = SubResource("GradientTexture2D_c1ge3")
metadata/_edit_use_anchors_ = true

[node name="HeroHealthNumber" type="Label" parent="Health"]
offset_left = -20.0
offset_top = -12.0
offset_right = 20.0
offset_bottom = 11.0
text = "80"
horizontal_alignment = 1
metadata/_edit_use_anchors_ = true

[connection signal="pressed" from="Exit" to="." method="_on_exit_pressed"]
[connection signal="pressed" from="Deck/DeckButton" to="Inventory" method="_on_deck_button_pressed"]
[connection signal="toggled" from="Deck/DeckButton" to="." method="_on_deck_button_toggled"]
[connection signal="toggled" from="Deck/DiscardedCardsButton" to="." method="_on_discarded_cards_button_toggled"]
